--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   translator: ^0.1.6+1
   rflutter_alert: ^2.0.2
+  flutter_keyboard_visibility: ^5.0.0
 
 dev_dependencies:
   flutter_test:
