--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
-  translator: ^0.1.6+1
   rflutter_alert: ^2.0.2
   flutter_keyboard_visibility: ^5.0.0
+  shared_preferences: ^2.0.5
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
